...
    "Concluir": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Done"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Listo"
...
    "Guardar": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Save"
          }
        },
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Guardar"
...
